--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,18 @@
 
 
 body {
-    background-color: var(--secondary);
+    background-color: cornsilk;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
 .nameplate {
+    align-self: center;
+    justify-self: center;
     width: 75%;
     height: 100%;
     padding: 3vw;
     border: 3px solid black;
-    background-color: var(--primary);
+    background-color: var(--primary-light);
     color: white;
     box-shadow: 10px 10px 5px 5px var(--primary-dark);
     display: flex;
@@ -42,4 +43,32 @@ body {
     background-color: white;
     padding: 5px;
     border: 3px solid var(--primary-dark);
+}
+
+.navbar > ul {
+    list-style-type: none;
+}
+
+.navbar > ul > li {
+    /*background-color: red;*/
+    width: 100%;
+    margin: 10px;
+}
+
+.navbar > ul > li > a {
+    text-decoration: none;
+    background-color: white;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+.navbar > li > a:hover {
+    filter: brightness(50%);
+}
+
+.info-block {
+    width: 50%;
+    margin: 5px;
+    border: 1px solid black;
+    padding: 5px;
 }
